@@ -1,5 +1,10 @@
 2008-02-08  Sven Herzberg  <sven@imendio.com>
 
+	* src/ui/ui-main.c: (ui_main_new): share the "New 1 Player" menu item
+	between Maemo and GNOME
+
+2008-02-08  Sven Herzberg  <sven@imendio.com>
+
 	* src/ui/ui-main.c: (ui_main_new): removed the glade_xml from the code
 
 2008-02-08  Sven Herzberg  <sven@imendio.com>
